# sdkwork-database

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md
.sdkwork/: README.md
configs/: database.toml.example
crates/sdkwork-database-cli/: Cargo.toml
crates/sdkwork-database-cli/src/: main.rs
crates/sdkwork-database-config/: Cargo.toml
crates/sdkwork-database-config/src/: claw_database.rs  database.rs  env.rs  error.rs  lib.rs  postgres.rs  sqlite.rs  toml_config.rs
crates/sdkwork-database-contract/: Cargo.toml
crates/sdkwork-database-contract/src/: error.rs  lib.rs  schema.rs
crates/sdkwork-database-contract/tests/: forum_schema.rs  registry.rs
crates/sdkwork-database-drift/: Cargo.toml  README.md
crates/sdkwork-database-drift/specs/: README.md  component.spec.json
crates/sdkwork-database-drift/src/: engine.rs  error.rs  introspect.rs  lib.rs  matching.rs
crates/sdkwork-database-drift/tests/: constraint_drift.rs  drift_smoke.rs  nullability_drift.rs  sqlite_metadata_drift.rs
crates/sdkwork-database-history/: Cargo.toml
crates/sdkwork-database-history/src/: error.rs  history.rs  lib.rs  lock.rs
crates/sdkwork-database-id/: Cargo.toml
crates/sdkwork-database-id/specs/: component.spec.json
crates/sdkwork-database-id/src/: lib.rs  node_allocator.rs
crates/sdkwork-database-lifecycle/: Cargo.toml
crates/sdkwork-database-lifecycle/src/: error.rs  lib.rs  options.rs  orchestrator.rs  registry_orchestrator.rs  seed_security.rs
crates/sdkwork-database-lifecycle/tests/: checksum_immutability.rs  migrate_seed_smoke.rs  registry_orchestrator.rs
crates/sdkwork-database-ops/: Cargo.toml
crates/sdkwork-database-ops-http/: Cargo.toml
crates/sdkwork-database-ops-http/src/: auth.rs  lib.rs
crates/sdkwork-database-ops/src/: error.rs  lib.rs  service.rs  types.rs
crates/sdkwork-database-ops/tests/: ops_smoke.rs
crates/sdkwork-database-repository/: Cargo.toml
crates/sdkwork-database-repository/src/: advanced.rs  entity.rs  error.rs  health.rs  lib.rs  migration.rs  query.rs  repository.rs  types.rs
crates/sdkwork-database-spi/: Cargo.toml
crates/sdkwork-database-spi/src/: drift_policy.rs  error.rs  layout.rs  lib.rs  manifest.rs  module.rs  registry.rs  seed_manifest.rs  traits.rs  types.rs
crates/sdkwork-database-sqlx/: Cargo.toml
crates/sdkwork-database-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-database-sqlx/src/: any.rs  builder.rs  error.rs  lib.rs  pool.rs  postgres.rs  process_shared.rs  sqlite.rs  sqlite_decimal.rs
crates/sdkwork-database-sqlx/tests/: process_shared_pool.rs
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/migrations/: MIG-2026-0715-snowflake-node-fencing.md
docs/product/prd/: PRD.md
specs/: DATABASE_FRAMEWORK_STANDARD.md
tests/: integration_test.rs
