[workspace]
members = [
    "crates/sdkwork-database-config",
    "crates/sdkwork-database-sqlx",
    "crates/sdkwork-database-repository",
    "crates/sdkwork-database-spi",
    "crates/sdkwork-database-history",
    "crates/sdkwork-database-contract",
    "crates/sdkwork-database-lifecycle",
    "crates/sdkwork-database-drift",
    "crates/sdkwork-database-ops",
    "crates/sdkwork-database-ops-http",
    "crates/sdkwork-database-id",
    "crates/sdkwork-database-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sdkwork/sdkwork-database"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls"] }
libsqlite3-sys = "=0.30.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
paste = "1"
sha2 = "0.10"
hex = "0.4"
tower = "0.5"
url = "2"

# Testing
tempfile = "3"
assert_matches = "1"

# ID generation
sdkwork-database-id = { path = "crates/sdkwork-database-id" }
sdkwork-id-core = { path = "../sdkwork-id/crates/sdkwork-id-core" }
