[package]
name = "sdkwork-database-drift"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SDKWork database schema drift detection"

[dependencies]
sdkwork-database-config = { path = "../sdkwork-database-config" }
sdkwork-database-contract = { path = "../sdkwork-database-contract" }
sdkwork-database-history = { path = "../sdkwork-database-history" }
sdkwork-database-sqlx = { path = "../sdkwork-database-sqlx" }
sdkwork-database-spi = { path = "../sdkwork-database-spi" }

async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres"] }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sdkwork-database-config = { path = "../sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database-lifecycle" }
sdkwork-database-sqlx = { path = "../sdkwork-database-sqlx" }
sdkwork-database-spi = { path = "../sdkwork-database-spi" }
