[package]
name = "sdkwork-database-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Database-backed Snowflake node_id allocation and unified ID generation for SDKWork services."

[lib]
name = "sdkwork_database_id"
path = "src/lib.rs"

[dependencies]
sdkwork-id-core = { workspace = true }
sdkwork-database-config = { path = "../sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database-sqlx" }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true, features = ["sqlite", "postgres"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
