[package]
name = "sdkwork-database-ops-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum routes and auth middleware for SDKWork database ops endpoints"

[dependencies]
axum = "0.8"
sdkwork-database-ops = { path = "../sdkwork-database-ops" }
sdkwork-database-spi = { path = "../sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database-sqlx" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
sdkwork-database-config = { path = "../sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database-lifecycle" }
sdkwork-database-sqlx = { path = "../sdkwork-database-sqlx" }
