[package]
name = "sdkwork-database-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SDKWork database ops read models for status, drift, migrations, and seeds"

[dependencies]
sdkwork-database-drift = { path = "../sdkwork-database-drift" }
sdkwork-database-history = { path = "../sdkwork-database-history" }
sdkwork-database-lifecycle = { path = "../sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database-sqlx" }

chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sdkwork-database-config = { path = "../sdkwork-database-config" }
