[package]
name = "sdkwork-database-repository"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified repository pattern abstraction for SDKWork database operations"

[dependencies]
sdkwork-database-config = { path = "../sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database-sqlx" }
sdkwork-id-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true, features = ["sqlite", "postgres"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
